--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/Greenlet-icon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Add Google Fonts link here -->
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  <title>Vite + React</title>
+  <title>Greenlet</title>
 </head>
 
 <body>
