--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/Greenlet-icon.jpg" />
+  <link rel="icon" type="image/svg+xml"
+    href="https://res.cloudinary.com/depxadgb3/image/upload/v1704907058/Logo_nxtyog.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Add Google Fonts link here -->
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
